--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Brandon Derbidge",
   "license": "ISC",
   "dependencies": {
+    "chai-as-promised": "^7.1.1",
     "express": "^4.16.4"
   },
   "devDependencies": {
